--- a/car.html
+++ b/car.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html>
- 
+ <head>
+     <title>
+         Cars Page
+     </title>
+ </head>
 <body>
 
-<h2>Getting input</h2>
+<h1>Sai Harsha Vennela orders a car</h1>
 
 <form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <input type="checkbox" id="electric" name="car1" value="electric">
+    <label for="electric">electric</label><br>
 
-    <label for="form1_nick">What is your nickname </label>
-    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
+    <input type="checkbox" id="ac" name="car2" value="ac">
+    <label for="ac">ac</label><br>
 
-    <input type="button" onclick="resolveForm()" value="Get values from form">
+    <input type="checkbox" id="gps" name="car3" value="gps">
+    <label for="gps">gps</label><br><br>
+
+    <input type="button" value="Order a car" onclick="orderCar()">
+
 </form>
 
 
-<p id="result">This text will be replaced </p>
+<p id="result"> </p>
 
 <script> 
 
-function resolveForm (){
-    console.log("Getting form values")
-    age = document.getElementById("form1_age").value
-    nick = document.getElementById("form1_nick").value
-    confirmed = confirm("Are these the values? "+age+" and "+nick)
+let my_car = new Object();
+
+function orderCar()
+{
+    my_car;
+    electric = document.getElementById("electric").checked;
+    ac = document.getElementById("ac").checked;
+    gps = document.getElementById("gps").checked;
     
-    out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Values were confirmed"
-    } else {
-        out.innerHTML = "Values were not confirmed"
-    }
+    out = document.getElementById("result");
+    out.innerHTML = electric+" and "+ac+" and "+gps;
 }
+
 </script>
 
 </body>
