--- a/car.html
+++ b/car.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  
      <title>
          Cars Page
      </title>
  </head>
-<body>
+<body class="container bg-dark text-white">
 
 <h1>Sai Harsha Vennela orders a car</h1>
 
@@ -19,7 +29,7 @@
     <input type="checkbox" id="gps" name="car3" value="gps">
     <label for="gps">gps</label><br><br>
 
-    <input type="button" value="Order a car" onclick="orderCar()">
+    <input type="button" value="Order a car" onclick="orderCar()" class="btn btn-light">
 
 </form>
 <p id="result"> </p>
@@ -29,7 +39,7 @@
     <input type="text" value="color" id="color"><br><br> 
     <label for="property">Enter a value</label>
     <input type="text" value="property" id="property"> <br><br>
-    <input type="button" value="Update the car" onclick="updateCar()"><br>
+    <input type="button" value="Update the car" onclick="updateCar()" class="btn btn-light"><br>
 </form>
 
 
